--- a/src/app/logistics/components/logistics-container/logistics-container.component.html
+++ b/src/app/logistics/components/logistics-container/logistics-container.component.html
@@ -1,52 +1,70 @@
 <div class="accordion">
   <div class="accordion-item" *ngFor="let logistics of logisticses">
     <h2 class="accordion-header">
-      <button class="accordion-button text-black bg-transparent" type="button" data-bs-toggle="collapse"
-        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+      <button
+        class="accordion-button text-black bg-transparent"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#collapseOne"
+        aria-expanded="true"
+        aria-controls="collapseOne"
+      >
         单号&nbsp;<strong>{{ logistics.tn }}</strong> &nbsp;的物流信息
-        <button class="ms-auto btn btn-sm btn-light" (click)="onCopy(logistics.tn)" [cdkCopyToClipboard]="logistics.tn">
+        <button
+          class="ms-auto btn btn-sm btn-light"
+          (click)="onCopy(logistics.tn)"
+          [cdkCopyToClipboard]="logistics.tn"
+        >
           点击复制单号
         </button>
       </button>
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show">
-      <div class="accordion-body py-1">
+      <div class="accordion-body py-1 context overflow-y-auto">
         <ng-container *ngIf="logistics.err; else context">
           <p class="mb-0">
             {{ logistics.err }}
           </p>
         </ng-container>
         <ng-template #context>
-          <div class="d-grid">
-            <div class="d-flex border-bottom border-dark fs-6 fw-semibold">
-              <span class="col-2 mb-1 ms-1">时间</span>
-              <span class="col-10 mb-1 ms-1">物流</span>
-            </div>
-            <ul class="list-group list-group-flush overflow-y-auto context placeholder-glow">
+          <table
+            class="table position-relative overflow-y-auto placeholder-glow"
+          >
+            <thead>
+              <tr>
+                <th class="time">时间</th>
+                <th>物流</th>
+              </tr>
+            </thead>
+            <tbody>
               <ng-container *ngIf="logistics.context?.length; else loading">
-                <li class="list-group-item px-1" *ngFor="let ctx of logistics.context">
-                  <div class="d-flex">
-                    <span class="col-2">{{ +ctx.time * 1000 | date }}</span>
-                    <span class="col-10">{{ ctx.desc }}</span>
-                  </div>
-                </li>
+                <tr *ngFor="let ctx of logistics.context">
+                  <td class="time">{{ +ctx.time * 1000 | date }}</td>
+                  <td class="col-10">{{ ctx.desc }}</td>
+                </tr>
               </ng-container>
-
               <ng-template #loading>
-                <li class="list-group-item px-1">
-                  <div class="loading">
-                    <div>
-                      <span class="placeholder bg-dark w-100"></span>
-                    </div>
-                    <div>
-                      <span class="placeholder bg-dark w-100"></span>
-                      <span class="placeholder bg-dark w-100"></span>
-                    </div>
-                  </div>
-                </li>
+                <tr>
+                  <td>
+                    <span class="placeholder bg-dark w-100"></span>
+                  </td>
+                  <td>
+                    <span class="placeholder bg-dark w-100"></span>
+                    <span class="placeholder bg-dark w-100"></span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span class="placeholder bg-dark w-100"></span>
+                  </td>
+                  <td>
+                    <span class="placeholder bg-dark w-100"></span>
+                    <span class="placeholder bg-dark w-100"></span>
+                  </td>
+                </tr>
               </ng-template>
-            </ul>
-          </div>
+            </tbody>
+          </table>
         </ng-template>
       </div>
     </div>
