--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,7 @@
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <button class="nav-link">Logout</button>
+          <button class="nav-link" (click)="onLogout()">Logout</button>
         </li>
       </ul>
     </div>
