--- a/src/app/logistics/components/logistics-container/logistics-container.component.html
+++ b/src/app/logistics/components/logistics-container/logistics-container.component.html
@@ -1,20 +1,10 @@
 <div class="accordion">
   <div class="accordion-item" *ngFor="let logistics of logisticses">
     <h2 class="accordion-header">
-      <button
-        class="accordion-button text-black bg-transparent"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#collapseOne"
-        aria-expanded="true"
-        aria-controls="collapseOne"
-      >
+      <button class="accordion-button text-black bg-transparent" type="button" data-bs-toggle="collapse"
+        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
         单号&nbsp;<strong>{{ logistics.tn }}</strong> &nbsp;的物流信息
-        <button
-          class="ms-auto btn btn-sm btn-light"
-          (click)="onCopy(logistics.tn)"
-          [cdkCopyToClipboard]="logistics.tn"
-        >
+        <button class="ms-auto btn btn-sm btn-light" (click)="onCopy(logistics.tn)" [cdkCopyToClipboard]="logistics.tn">
           点击复制单号
         </button>
       </button>
@@ -27,9 +17,7 @@
           </p>
         </ng-container>
         <ng-template #context>
-          <table
-            class="table position-relative overflow-y-auto placeholder-glow"
-          >
+          <table class="table position-relative overflow-y-auto placeholder-glow">
             <thead>
               <tr>
                 <th class="time">时间</th>
@@ -39,8 +27,16 @@
             <tbody>
               <ng-container *ngIf="logistics.context?.length; else loading">
                 <tr *ngFor="let ctx of logistics.context">
-                  <td class="time">{{ +ctx.time * 1000 | date }}</td>
-                  <td class="col-10">{{ ctx.desc }}</td>
+                  <td class="time">
+                    {{
+                    +ctx.time * 1000
+                    | date
+                    : 'yyyy-MM-dd HH:mm:ss'
+                    : 'Asia/Shanghai'
+                    : 'zh-cn'
+                    }}
+                  </td>
+                  <td>{{ ctx.desc }}</td>
                 </tr>
               </ng-container>
               <ng-template #loading>
